--- a/main.css
+++ b/main.css
@@ -19,4 +19,6 @@ body {
     overflow: auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
